feat: add getCourseGrades to fetch grades for a student for a given course